# memory-game

./: .gitignore  Cargo.toml  README.md
src/: main.rs
ui/: memory.slint
