[package]
name = "memory-game"
version = "0.2.0"
authors = ["krons711 <vladk.711@gmail.com>"]
edition = "2021"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "memory-game"

[dependencies]
rand = "0.8"
slint = "1.6"

[build-dependencies]
slint-build = "1.6"